<resources>
    <string name="app_name">BeetleWare Task</string>
    <string name="label_ok">OK</string>
    <string name="message_loading">Loading..</string>
    <string name="label_user_name">User Name</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>
    <string name="title_activity_main_bottom" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="label_sold_items">Sold Items</string>
    <string name="label_products">Products</string>
    <string name="label_customer">Customer</string>
    <string name="label_sales">Sales</string>
    <string name="label_offer">Offer</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_logout">Logout</string>
    <string name="label_settings">Settings</string>
    <string name="message_nothing_to_do">Nothing to do here..</string>
    <string name="label_save">Save</string>
    <string name="label_select_your_language">Select Your Language</string>
    <string name="label_search_items">Search Items</string>
    <string name="label_add_new_item">Add New Item</string>
    <string name="message_invalid_login">Make sure you are using a valid user name and password.</string>
    <string name="label_invalid_credentials">Invalid Credentials</string>
    <string name="label_sorry">Sorry</string>
    <string name="message_inactive_account">Your Account is not active, contact customer support for this.</string>
    <string name="error_user_name">User Name should be 2 or more character</string>
    <string name="error_password">Password should be 6 or more character or numbers</string>
    <string name="label_search">Search</string>
    <string name="label_profile">Profile</string>
    <string name="label_home">Home</string>
</resources>