<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="com.beetleware.task.ui.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navSearch"
        android:name="com.beetleware.task.ui.main.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navProfile"
        android:name="com.beetleware.task.ui.main.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>