<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SigninActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.562">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@color/colorAccent2"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_user" />

                    <EditText
                        android:textAlignment="viewStart"
                        android:text="aly"
                        android:id="@+id/edUserName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/stroke_grey"
                        android:hint="@string/label_user_name"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textSize="15sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@color/colorAccent2"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_paasword" />

                    <EditText
                        android:textAlignment="viewStart"
                        android:inputType="textPassword"
                        android:text="123456"
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/stroke_grey"
                        android:hint="@string/label_password"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textSize="15sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/btnLogin"
        android:gravity="center"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:elevation="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_185sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp">

        <Button
            android:textAllCaps="false"
            android:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/white"
            android:text="@string/label_login"
            android:textColor="@color/white"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>