<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        app:cardBackgroundColor="@color/colorAccent2"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="39dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_50sdp">

                    <ImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/profile" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mahmoud Rokiba"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Android Developer"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/transparent"
                    android:padding="@dimen/_14sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_edit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCustomers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="200"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_customer"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtSales"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="200"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_sales"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtOffer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="200"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_offer"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:minHeight="@dimen/_50sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnNotifications"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorAccent2"
                    android:src="@drawable/ic_notifi"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/label_notifications"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:padding="@dimen/_12sdp"
                    app:tint="@color/colorAccent2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSettings"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorAccent2"
                    android:src="@drawable/ic_settings"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/label_settings"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:padding="@dimen/_12sdp"
                    app:tint="@color/colorAccent2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnLogout"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorAccent2"
                    android:src="@drawable/ic_exit"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/label_logout"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:padding="@dimen/_12sdp"
                    app:tint="@color/colorAccent2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>