<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardBackgroundColor="@color/colorAccent2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_50sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp">

                    <ImageView
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_sold_items"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/white"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtSoldCount"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="40sp"
                        android:textColor="@color/white"
                        android:text="200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/label_sold_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardBackgroundColor="@color/colorAccent2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_50sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp">

                    <ImageView
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_sold_items"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/white"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtProductsCount"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="40sp"
                        android:textColor="@color/white"
                        android:text="200"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/label_products"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_50sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.cardview.widget.CardView
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_item"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>

                <TextView
                    android:gravity="center"
                    app:drawableTint="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/label_add_new_item"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:scaleType="centerCrop"
                    android:src="@drawable/search"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>

                <TextView
                    android:gravity="center"
                    app:drawableTint="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/label_search_items"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>